<resources>
    <string name="app_name">DeepL Translator</string>
    <string name="app_name_2">AI Translator</string>
    <string name="translate_text_btn">Translate</string>
    <string name="text_to_translate_field">Text to translate</string>
    <string name="translation_hint">Translation</string>
    <string name="language_text">Language</string>
    <string name="country_image_list">country image</string>
    <string name="confirm_text">OK</string>
    <string name="loading">Loading...</string>
    <string name="cancel_button_txt">cancel button</string>
    <string name="delete_text_btn">Clear</string>
    <string name="switch_button_txt">Switch languages</string>
    <string name="from_text_spinner">From:</string>
    <string name="to_text_spinner">To:</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string-array name="source_lang">
        <item>Any language</item>
        <item>DE</item>
        <item>EN</item>
        <item>ES</item>
        <item>FR</item>
        <item>IT</item>
        <item>PT</item>
        <item>NL</item>
        <item>RU</item>
    </string-array>

    <string-array name="target_lang">
        <item>DE</item>
        <item>EN-GB</item>
        <item>EN-US</item>
        <item>ES</item>
        <item>FR</item>
        <item>IT</item>
        <item>PT</item>
        <item>NL</item>
        <item>RU</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_edittext_hint">Enter a translation</string>
    <string name="source_language_flag">Source language flag</string>
    <string name="target_language_flag">Target language flag</string>
    <string name="back_button">back button</string>
    <string name="language_select_title">Language select</string>
    <string name="all_languages_title">All languages</string>
    <string name="recent_languages_title">Recent languages</string>
    <string name="language_translation_title">Translation</string>
    <string name="api_usage">API Usage</string>
    <string name="main_page_title">AI Translator</string>
    <string name="no_language_found">No corresponding language found</string>
</resources>