<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="textRaw"
            type="String" />

        <variable
            name="translation"
            type="com.playgroundagc.deepltranslator.domain.Response" />

        <variable
            name="viewModel"
            type="com.playgroundagc.deepltranslator.app.ui.MainViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".app.ui.MainActivity">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="24dp"
                    android:layout_centerVertical="true"
                    android:text="@string/from_text_spinner"/>

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/source_lang_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="16dp"
                    android:entries="@array/source_lang"
                    android:layout_centerVertical="true"
                    android:padding="4dp"
                    android:spinnerMode="dialog" />
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/detected_source_language"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="start|top"
                android:inputType="text"
                android:minHeight="50dp"
                android:padding="8dp"
                android:visibility="gone" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/text_field_border"
                app:cardElevation="8dp">

                <ImageButton
                    android:id="@+id/clear_button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/cancel_button_txt"
                    android:src="@drawable/ic_cancel" />

                <EditText
                    android:id="@+id/textRaw"
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="48dp"
                    android:background="@android:color/transparent"
                    android:gravity="start|top"
                    android:hint="@string/text_to_translate_field"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:padding="8dp"
                    android:text="@{viewModel.textEntered}" />

            </com.google.android.material.card.MaterialCardView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="24dp"
                    android:layout_centerVertical="true"
                    android:text="@string/to_text_spinner"/>

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/target_lang_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="48dp"
                    android:layout_marginBottom="16dp"
                    android:entries="@array/target_lang"
                    android:spinnerMode="dialog" />

                <ImageButton
                    android:id="@+id/switch_button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="end"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/switch_button_txt"
                    android:src="@drawable/ic_change_circle" />

            </RelativeLayout>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                app:cardElevation="6dp">

                <RelativeLayout
                    android:id="@+id/loadLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <ProgressBar
                        android:id="@+id/progressBar"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="8dp"
                        android:indeterminateTint="@color/app_theme"
                        android:visibility="invisible" />

                    <TextView
                        android:id="@+id/progressBarText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/loading"
                        android:textColor="@color/app_theme"
                        android:visibility="gone" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textTranslated"
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:gravity="start|top"
                        android:hint="@string/translation_hint"
                        android:inputType="textMultiLine|textNoSuggestions"
                        android:minHeight="50dp"
                        android:padding="8dp" />
                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <Button
                android:id="@+id/translationBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="4dp"
                android:text="@string/translate_text_btn"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>
</layout>